codebird-php - changelog
========================

3.1.0 (not yet released)

3.0.0 (2016-01-01)
+ Add unit testing suite
+ #32 Support Twitter Streaming API
+ #144 Support Twitter Collections API
+ #145 Support Twitter TON (Object Nest) API
+ #120 Support Twitter Ads API
+ #117 Drop cURL workarounds added for PHP 5.3
+ Update cacert.pem
+ #121 Allow for multiple parameters in templated methods
  by replacing preg_match with preg_match_all
+ #134 Add support for compressed remote images
+ #129 Allow to change remote media download timeout
+ Support WebP media format
+ Fixes for non-multipart media uploads, see #141
+ Return rate-limiting info as object, when return format = object
- #107 Decoding issue for big ints on 32-bit servers
- #147 Undefined index when checking for possible media files

2.7.2 (2015-09-23)
- #135 Invalid HTTP request headers in non-cURL mode

2.7.1 (2015-08-16)
+ #124 Download redirected remote images

2.7.0 (2015-05-14)
- #92, #108 Fix issues with uploading special chars
+ #109 Proxy support
- Drop support for internal and old API methods
+ #111 Set user agent for remote calls
+ #106 Add logout method
+ #86 Return exception for failed cURL requests

2.6.1 (2014-12-13)
- #90 Allow uploading media with special chars

2.6.0 (2014-10-12)
+ #67 Don't require cURL, allow stream connections too
+ Use default timeout
+ #69 Add composer/installers to allow install path changes
- Regression: Codebird::getApiMethods removed accidentally in 2.5.0
+ #66 Allow remote media uploads
- #81 CURLOPT_TIMEOUT_MS and CURLOPT_CONNECTTIMEOUT_MS errors on PHP 5.3
- #83 Use POST for users/lookup and statuses/lookup, params may get too long for GET
+ Update README to reflect new process for uploading single/multiple media, see #78

2.5.0 (2014-06-20)
+ Add section about cacert.pem to README
+ Option to set cURL timeout
+ #42 Allow to get the supported API methods as array
+ #48 Update composer file to jublonet path
+ Update cacert.pem root certificates file