@@ -2,6 +2,7 @@ codebird-php - changelog
 ========================
 
 3.1.0 (not yet released)
++ #143 Add support for proxy types
 
 3.0.0 (2016-01-01)
 + Add unit testing suite
